@startuml

title __SRC's Class Diagram__\n

 namespace Projet {
    class Aeroport {
        - IATA : String
        - Name : String
        - country : String
        - latitude : double
        - longitude : double
        + Aeroport()
        + getIATA()
        + getLatitude()
        + getLongitude()
        + toString()
    }
  }
  

  namespace Projet {
    class Earth {
        - ry : Rotate
        - sph : Sphere
        - yellowSphere : ArrayList<Sphere>
        + Earth()
        + createSphere()
        + displayRedSphere()
        + displayYellowSphere()
        + getEarth()
    }
  }
  

  namespace  Projet {
    class Flight {
        - airLineCode : String
        - airlineName : String
        - arrivalTime : LocalDateTime
        - departureTime : LocalDateTime
        - number : int
        + Flight()
        + getArrival()
        + getDeparture()
        + toString()
    }
  }
  

  namespace Projet {
    class Main {
        ~ listOfFlight : ArrayList<Flight>
        ~ tz : Translate
        - mousePosX : double
        - mousePosY : double
        {static} + main()
        + start()
    }
  }
  

  namespace Projet {
    class JsonFlightFillerOracle {
        - list : ArrayList<Flight>
        + JsonFlightFillerOracle()
        + displayFlight()
        + getList()
        {static} + main()
    }
  }
  

  namespace Projet {
    class World {
        ~ list : ArrayList<Aeroport>
        + World()
        + findByCode()
        + findNearestAirport()
        + getList()
        {static} + main()
        - distance()
    }
  }
  

  Projet.Earth -up-|> javafx.scene.Group
  Projet.Flight o-- Aeroport : arrival
  Projet.Flight o-- Aeroport : departure
  Projet.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
